--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
         <div class="content">
             <h1 class="heading">Make space for yourself to focus.</h1>
             
-            <p class="subheading">Be among the first to experience meditation created uniquely for you</p>
+            <p class="subheading">Be among the first to experience <br>
+                meditation created uniquely for you.</p>
             
             <form class="input-container" id="emailForm">
                 <div class="input-wrapper">
