terms and privacy

--- a/index.html
+++ b/index.html
@@ -168,7 +168,25 @@
             font-size: 13px;
             color: rgba(255, 255, 255, 0.4);
             font-weight: 300;
-            margin-bottom: 0;
+            margin-bottom: 12px;
+        }
+
+        .footer-links {
+            display: flex;
+            justify-content: center;
+            gap: 24px;
+            flex-wrap: wrap;
+        }
+
+        .footer-link {
+            color: rgba(255, 255, 255, 0.5);
+            text-decoration: none;
+            font-size: 13px;
+            transition: color 0.2s ease;
+        }
+
+        .footer-link:hover {
+            color: rgba(255, 255, 255, 0.7);
         }
 
         /* Success Message */
@@ -290,6 +308,10 @@
 
         <div class="footer">
             <p class="footer-text">© 2025 Whitespace</p>
+            <div class="footer-links">
+                <a href="/terms.html" class="footer-link">Terms</a>
+                <a href="/privacy.html" class="footer-link">Privacy</a>
+            </div>
         </div>
     </div>
 
