--- a/welcome.html
+++ b/welcome.html
@@ -172,8 +172,8 @@
         <div class="footer" id="footer">
             <p class="footer-text">© 2025 Whitespace</p>
             <div class="footer-links">
-                <a href="/terms.html" class="footer-link">Terms</a>
-                <a href="/privacy.html" class="footer-link">Privacy</a>
+                <a href="/terms" class="footer-link">Terms</a>
+                <a href="/privacy" class="footer-link">Privacy</a>
             </div>
         </div>
         
