--- a/privacy.html
+++ b/privacy.html
@@ -199,7 +199,7 @@
 
     <div class="container">
         <div class="header">
-            <a href="/"><img src="better_logo__3_.png" alt="Whitespace" class="logo"></a>
+            <a href="/"><img src="src/assets/whitespace logo.png" alt="Whitespace" class="logo"></a>
             <h1>Privacy Policy</h1>
             <p class="last-updated">Last Updated: December 2025</p>
         </div>
