--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
     <section class="hero">
         <div class="hero-content">
             <img 
-                src="src/assets/whitespace logo.png" 
+                src="https://c4c7ee2640e335085d93afe0c1a41ae6.cdn.bubble.io/f1766176221836x544526176091019140/whitespace.png" 
                 alt="Whitespace" 
                 class="logo fade-up visible fade-up-delay-3"
             >
@@ -1165,7 +1165,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-left">
-                <img src="src/assets/whitespace logo.png" alt="Whitespace" class="footer-logo">
+                <img src="https://c4c7ee2640e335085d93afe0c1a41ae6.cdn.bubble.io/f1766176221836x544526176091019140/whitespace.png" alt="Whitespace" class="footer-logo">
                 <p class="footer-copyright inter">© 2025 Whitespace. All rights reserved.</p>
             </div>
             
