--- a/privacy.html
+++ b/privacy.html
@@ -199,7 +199,7 @@
 
     <div class="container">
         <div class="header">
-            <a href="/"><img src="src/assets/whitespace logo.png" alt="Whitespace" class="logo"></a>
+            <a href="/"><img src="https://c4c7ee2640e335085d93afe0c1a41ae6.cdn.bubble.io/f1766176221836x544526176091019140/whitespace.png" alt="Whitespace" class="logo"></a>
             <h1>Privacy Policy</h1>
             <p class="last-updated">Last Updated: December 2025</p>
         </div>
