--- a/index.html
+++ b/index.html
@@ -672,13 +672,13 @@
             display: grid;
             grid-template-columns: 1fr;
             gap: 24px;
-            max-width: 900px;
+            max-width: 1200px;
             margin: 0 auto 48px;
         }
 
         @media (min-width: 768px) {
             .journal-grid {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(3, 1fr);
                 gap: 32px;
             }
         }
@@ -1138,32 +1138,44 @@
             </div>
 
             <div class="journal-grid">
-                <a href="/blog/sleep-science.html" class="journal-card fade-up fade-up-delay-1">
+                <a href="/blog/app-not-working.html" class="journal-card fade-up fade-up-delay-1">
                     <div class="journal-card-image">
-                        <img src="/blog/assets/blog-images/paradox.png" alt="The Science of Better Sleep">
+                        <img src="/blog/assets/blog-images/digital overwhelm.png" alt="Why Your Meditation App Isn't Working">
                     </div>
                     <div class="journal-card-content">
-                        <span class="journal-card-tag inter">Sleep Science</span>
-                        <h3 class="crimson">How Meditation Apps Are Transforming Rest</h3>
-                        <p class="inter">New research reveals that app-based mindfulness produces measurable improvements in sleep quality.</p>
+                        <span class="journal-card-tag inter">App Design</span>
+                        <h3 class="crimson">Why Your Meditation App Isn't Working</h3>
+                        <p class="inter">Most users quit within weeks. Learn why popular apps fail - and what actually works.</p>
                         <span class="journal-card-link crimson">Read Article →</span>
                     </div>
                 </a>
 
-                <a href="/blog/athletes-meditate.html" class="journal-card fade-up fade-up-delay-2">
+                <a href="/blog/focus-productivity.html" class="journal-card fade-up fade-up-delay-2">
                     <div class="journal-card-image">
-                        <img src="/blog/assets/blog-images/performance.png" alt="Why Elite Athletes Meditate">
+                        <img src="/blog/assets/blog-images/focused attention.png" alt="Meditation for Focus">
                     </div>
                     <div class="journal-card-content">
-                        <span class="journal-card-tag inter">Performance</span>
-                        <h3 class="crimson">Why Elite Athletes Meditate</h3>
-                        <p class="inter">From Phil Jackson to Steph Curry—discover the mental edge transforming professional sports.</p>
+                        <span class="journal-card-tag inter">Focus</span>
+                        <h3 class="crimson">Meditation for Focus and Productivity</h3>
+                        <p class="inter">Science shows specific meditation techniques enhance attention and workplace productivity.</p>
+                        <span class="journal-card-link crimson">Read Article →</span>
+                    </div>
+                </a>
+
+                <a href="/blog/meditation-frequency.html" class="journal-card fade-up fade-up-delay-3">
+                    <div class="journal-card-image">
+                        <img src="/blog/assets/blog-images/meditation calendar.png" alt="How Often Should You Meditate">
+                    </div>
+                    <div class="journal-card-content">
+                        <span class="journal-card-tag inter">Practice</span>
+                        <h3 class="crimson">How Often Should You Meditate?</h3>
+                        <p class="inter">Research reveals surprising truths about meditation frequency and lasting benefits.</p>
                         <span class="journal-card-link crimson">Read Article →</span>
                     </div>
                 </a>
             </div>
 
-            <div class="journal-cta fade-up fade-up-delay-3">
+            <div class="journal-cta fade-up fade-up-delay-4">
                 <a href="/blog" class="ghost-btn">
                     View All Articles
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
