--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 60px 24px;
+            padding: 40px 24px 40px;
+        }
+
+        @media (min-width: 768px) {
+            .hero {
+                padding: 60px 24px 180px;
+            }
         }
 
         .hero-content {
@@ -85,12 +91,17 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            flex: 1;
-            padding: 40px 0;
+            padding: 20px 0;
+        }
+
+        @media (min-width: 768px) {
+            .hero-content {
+                padding: 40px 0;
+            }
         }
 
         .logo {
-            width: 210px;
+            width: 160px;
             height: auto;
             margin-bottom: 0;
             filter: drop-shadow(0 0 30px rgba(107, 140, 255, 0.4));
@@ -109,9 +120,15 @@
             font-weight: 400;
             color: rgba(255, 255, 255, 0.95);
             line-height: 1.25;
-            margin-bottom: 64px;
+            margin-bottom: 32px;
             min-height: 1.25em;
             opacity: 0; /* Hide initially */
+        }
+
+        @media (min-width: 768px) {
+            .hero h1 {
+                margin-bottom: 64px;
+            }
         }
 
         .hero h1.animating {
@@ -142,7 +159,7 @@
             color: rgba(255, 255, 255, 0.6);
             line-height: 1.7;
             max-width: 640px;
-            margin: 0 auto 56px;
+            margin: 0 auto 32px;
         }
 
         @media (min-width: 768px) {
@@ -157,6 +174,13 @@
             bottom: 100px;
             left: 50%;
             transform: translateX(-50%);
+            display: none;
+        }
+
+        @media (min-width: 768px) {
+            .scroll-indicator {
+                display: block;
+            }
         }
 
         /* Journal Peek Teaser */
@@ -169,6 +193,13 @@
             display: flex;
             justify-content: center;
             pointer-events: none;
+            display: none;
+        }
+
+        @media (min-width: 768px) {
+            .journal-peek-teaser {
+                display: flex;
+            }
         }
 
         .journal-peek-label {
@@ -342,13 +373,14 @@
             flex-direction: column;
             gap: 16px;
             align-items: center;
-            margin-top: 24px;
+            margin-top: 16px;
         }
 
         @media (min-width: 640px) {
             .hero-cta-row {
                 flex-direction: row;
                 justify-content: center;
+                margin-top: 24px;
             }
         }
 
