--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
             >
 
             <h1 id="heroHeadline">
-                Meditation that evolves<br>with you.
+                The Space between your<br>Before and After.
             </h1>
 
             <p class="hero-subtitle fade-up visible fade-up-delay-7">
