--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
             >
 
             <h1 id="heroHeadline">
-                The Space between your<br>Before and After.
+                Meditation that adapts<br>to you.
             </h1>
 
             <p class="hero-subtitle fade-up visible fade-up-delay-7">
