--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
             >
 
             <h1 id="heroHeadline">
-                Guided meditations that<br>adapt to you.
+                A personal meditation teacher<br>just for you.
             </h1>
 
             <p class="hero-subtitle fade-up visible fade-up-delay-7">
