--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
             >
 
             <h1 id="heroHeadline">
-                A personal meditation teacher<br>just for you.
+                Your personal meditation guide.<br>On-demand.
             </h1>
 
             <p class="hero-subtitle fade-up visible fade-up-delay-7">
