--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
             </h1>
 
             <p class="hero-subtitle fade-up visible fade-up-delay-7">
-                Personalized meditation spaces for the moments that matter. Tell Whitespace what you need and get guidance made for you - instantly.
+                Personalized meditation spaces for the moments that matter. Tell Whitespace what you need and get guidance made for you - exactly when you need it.
             </p>
 
             <div class="fade-up visible fade-up-delay-9">
