--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personalized meditation spaces for the moments that matter. Tell Whitespace what you need and get AI-generated guidance made for you - instantly.">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png">
     
     <title>Whitespace | Personalized AI Meditation & Focus</title>
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://whitespace.so/">
+    <meta property="og:title" content="Whitespace | Personalized AI Meditation & Focus">
+    <meta property="og:description" content="Personalized meditation spaces for the moments that matter. Tell Whitespace what you need and get AI-generated guidance made for you - instantly.">
+    <meta property="og:image" content="https://whitespace.so/src/assets/og-image.png">
+    <meta property="og:site_name" content="Whitespace">
+
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://whitespace.so/">
+    <meta name="twitter:title" content="Whitespace | Personalized AI Meditation & Focus">
+    <meta name="twitter:description" content="Personalized meditation spaces for the moments that matter. Tell Whitespace what you need and get AI-generated guidance made for you - instantly.">
+    <meta name="twitter:image" content="https://whitespace.so/src/assets/og-image.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
