--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,19 @@
             </div>
 
             <div class="journal-grid">
-                <a href="/blog/app-not-working.html" class="journal-card fade-up fade-up-delay-1">
+                <a href="/blog/best-meditation-apps-2026.html" class="journal-card fade-up fade-up-delay-1">
+                    <div class="journal-card-image">
+                        <img src="/blog/assets/blog-images/bestmeditationapps2026.png" alt="Best Meditation Apps 2026">
+                    </div>
+                    <div class="journal-card-content">
+                        <span class="journal-card-tag inter">Comparison</span>
+                        <h3 class="crimson">The 5 Best Meditation Apps of 2026</h3>
+                        <p class="inter">Complete comparison of Headspace, Calm, Insight Timer, Waking Up, and Whitespace.</p>
+                        <span class="journal-card-link crimson">Read Comparison →</span>
+                    </div>
+                </a>
+
+                <a href="/blog/app-not-working.html" class="journal-card fade-up fade-up-delay-2">
                     <div class="journal-card-image">
                         <img src="/blog/assets/blog-images/digital overwhelm.png" alt="Why Your Meditation App Isn't Working">
                     </div>
@@ -1202,7 +1214,7 @@
                     </div>
                 </a>
 
-                <a href="/blog/focus-productivity.html" class="journal-card fade-up fade-up-delay-2">
+                <a href="/blog/focus-productivity.html" class="journal-card fade-up fade-up-delay-3">
                     <div class="journal-card-image">
                         <img src="/blog/assets/blog-images/focused attention.png" alt="Meditation for Focus">
                     </div>
@@ -1210,18 +1222,6 @@
                         <span class="journal-card-tag inter">Focus</span>
                         <h3 class="crimson">Meditation for Focus and Productivity</h3>
                         <p class="inter">Science shows specific meditation techniques enhance attention and workplace productivity.</p>
-                        <span class="journal-card-link crimson">Read Article →</span>
-                    </div>
-                </a>
-
-                <a href="/blog/meditation-frequency.html" class="journal-card fade-up fade-up-delay-3">
-                    <div class="journal-card-image">
-                        <img src="/blog/assets/blog-images/meditation calendar.png" alt="How Often Should You Meditate">
-                    </div>
-                    <div class="journal-card-content">
-                        <span class="journal-card-tag inter">Practice</span>
-                        <h3 class="crimson">How Often Should You Meditate?</h3>
-                        <p class="inter">Research reveals surprising truths about meditation frequency and lasting benefits.</p>
                         <span class="journal-card-link crimson">Read Article →</span>
                     </div>
                 </a>
