--- a/index.html
+++ b/index.html
@@ -1687,7 +1687,7 @@
         }
     </script>
     
-    <!-- Vercel Analytics -->
-    <script defer src="/_vercel/insights/script.js"></script>
+    <!-- Vercel Analytics & Speed Insights -->
+    <script src="/assets/js/analytics.js"></script>
 </body>
 </html>
