--- a/privacy.html
+++ b/privacy.html
@@ -624,5 +624,8 @@
         createPhosphenes();
         animatePhosphenes();
     </script>
+
+    <!-- Vercel Analytics & Speed Insights -->
+    <script src="/assets/js/analytics.js"></script>
 </body>
 </html>
