--- a/terms.html
+++ b/terms.html
@@ -456,5 +456,8 @@
         createPhosphenes();
         animatePhosphenes();
     </script>
+
+    <!-- Vercel Analytics & Speed Insights -->
+    <script src="/assets/js/analytics.js"></script>
 </body>
 </html>
