--- a/welcome.html
+++ b/welcome.html
@@ -293,7 +293,7 @@
         animatePhosphenes();
         </script>
         
-        <!-- Vercel Analytics -->
-        <script defer src="/_vercel/insights/script.js"></script>
+        <!-- Vercel Analytics & Speed Insights -->
+        <script src="/assets/js/analytics.js"></script>
         </body>
         </html>
