--- a/index.html
+++ b/index.html
@@ -1266,26 +1266,26 @@
                     </div>
                 </a>
 
-                <a href="/blog/app-not-working.html" class="journal-card fade-up fade-up-delay-2">
+                <a href="/blog/why-successful-people-meditate.html" class="journal-card fade-up fade-up-delay-2">
                     <div class="journal-card-image">
-                        <img src="/blog/assets/blog-images/digital overwhelm.png" alt="Why Your Meditation App Isn't Working">
+                        <img src="/blog/assets/blog-images/building-from-within.png" alt="Why Successful People Meditate">
                     </div>
                     <div class="journal-card-content">
-                        <span class="journal-card-tag inter">App Design</span>
-                        <h3 class="crimson">Why Your Meditation App Isn't Working</h3>
-                        <p class="inter">Most users quit within weeks. Learn why popular apps fail - and what actually works.</p>
+                        <span class="journal-card-tag inter">Success</span>
+                        <h3 class="crimson">Why Successful People Meditate</h3>
+                        <p class="inter">Discover why high achievers prioritize inner work over external accomplishments.</p>
                         <span class="journal-card-link crimson">Read Article →</span>
                     </div>
                 </a>
 
-                <a href="/blog/focus-productivity.html" class="journal-card fade-up fade-up-delay-3">
+                <a href="/blog/how-to-take-control-of-your-life.html" class="journal-card fade-up fade-up-delay-3">
                     <div class="journal-card-image">
-                        <img src="/blog/assets/blog-images/focused attention.png" alt="Meditation for Focus">
+                        <img src="/blog/assets/blog-images/take-control.png" alt="How to Take Control of Your Life">
                     </div>
                     <div class="journal-card-content">
-                        <span class="journal-card-tag inter">Focus</span>
-                        <h3 class="crimson">Meditation for Focus and Productivity</h3>
-                        <p class="inter">Science shows specific meditation techniques enhance attention and workplace productivity.</p>
+                        <span class="journal-card-tag inter">Mindset</span>
+                        <h3 class="crimson">How to Take Control of Your Life</h3>
+                        <p class="inter">The hidden psychological factor that predicts success better than IQ or talent.</p>
                         <span class="journal-card-link crimson">Read Article →</span>
                     </div>
                 </a>
