--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
 
                 <a href="/blog/why-successful-people-meditate.html" class="journal-card fade-up fade-up-delay-2">
                     <div class="journal-card-image">
-                        <img src="/blog/assets/blog-images/building-from-within.png" alt="Why Successful People Meditate">
+                        <img src="/blog/assets/blog-images/performance.png" alt="Why Successful People Meditate">
                     </div>
                     <div class="journal-card-content">
                         <span class="journal-card-tag inter">Success</span>
@@ -1280,7 +1280,7 @@
 
                 <a href="/blog/how-to-take-control-of-your-life.html" class="journal-card fade-up fade-up-delay-3">
                     <div class="journal-card-image">
-                        <img src="/blog/assets/blog-images/take-control.png" alt="How to Take Control of Your Life">
+                        <img src="/blog/assets/blog-images/focused attention.png" alt="How to Take Control of Your Life">
                     </div>
                     <div class="journal-card-content">
                         <span class="journal-card-tag inter">Mindset</span>
