--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
             </h1>
 
             <p class="hero-subtitle fade-up visible fade-up-delay-7">
-                Align your mind, body, and intention. Whitespace generates personalized meditation sessions tailored to your goals - whether you need laser focus before a pitch, grounding after chaos, or clarity for your next big move.
+                Align your mind, body, and intention. Whitespace creates personalized meditation spaces to help you regain clarity - whether you're preparing for something important, grounding after stress, or finding direction for what comes next.
             </p>
 
             <div class="fade-up visible fade-up-delay-9">
