--- a/index.html
+++ b/index.html
@@ -136,15 +136,9 @@
             font-weight: 100;
             color: rgba(255, 255, 255, 0.95);
             line-height: 1.25;
-            margin-bottom: 24px;
+            margin-bottom: 0;
             min-height: 1.25em;
             opacity: 0; /* Hide initially */
-        }
-
-        @media (min-width: 768px) {
-            .hero h1 {
-                margin-bottom: 32px;
-            }
         }
 
         .hero h1.animating {
@@ -1171,6 +1165,14 @@
             margin: 0;
             text-align: center;
             padding: 0 24px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        @media (max-width: 640px) {
+            .scenario-rotator-wrapper {
+                padding: 0;
+            }
         }
 
         .scenario-rotator {
@@ -1179,11 +1181,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            width: 100%;
+            max-width: 100%;
         }
 
         @media (max-width: 640px) {
             .scenario-rotator {
-                min-height: 3.5em;
+                min-height: 4em;
             }
         }
 
@@ -1208,8 +1212,18 @@
         @media (max-width: 640px) {
             .scenario {
                 white-space: normal;
-                width: 90%;
                 left: 50%;
+                transform: translateX(-50%) scale(0.95);
+                width: calc(100% - 48px);
+                max-width: calc(100% - 48px);
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+                line-height: 1.4;
+                font-size: clamp(0.95rem, 4.2vw, 1.15rem);
+            }
+            
+            .scenario.active {
+                transform: translateX(-50%) scale(1);
             }
         }
 
@@ -1220,24 +1234,24 @@
         }
 
         .scenario-tagline {
-            font-family: 'Crimson Pro', serif;
-            font-size: clamp(1rem, 2.5vw, 1.25rem);
-            color: rgba(255, 255, 255, 0.55);
-            margin-top: 48px;
-            font-weight: 300;
-            font-style: italic;
+            font-family: 'Inter', sans-serif;
+            font-size: clamp(1.125rem, 3vw, 1.375rem);
+            color: rgba(255, 255, 255, 0.5);
+            margin-top: 32px;
+            font-weight: 400;
             text-align: center;
             max-width: 600px;
-            line-height: 1.6;
+            line-height: 1.7;
+            letter-spacing: -0.01em;
         }
 
         .scenario-tagline em {
-            color: rgba(255, 255, 255, 0.75);
-            font-style: italic;
+            color: rgba(255, 255, 255, 0.7);
+            font-style: normal;
         }
 
         .scenario-tagline strong {
-            color: rgba(255, 255, 255, 0.9);
+            color: rgba(255, 255, 255, 0.95);
             font-weight: 500;
         }
 
@@ -1612,31 +1626,9 @@
                 10x Your Inner Self
             </h1>
 
-            <!-- Scenario Rotator - Blur to Focus -->
-            <div class="scenario-rotator-wrapper fade-up visible fade-up-delay-7">
-                <div class="scenario-rotator" id="scenarioRotator">
-                    <span class="scenario">After doom-scrolling for 2 hours</span>
-                    <span class="scenario">Manifesting your first $10k MRR</span>
-                    <span class="scenario">Before the demo that could change everything</span>
-                    <span class="scenario">When your co-founder wants to pivot. Again.</span>
-                    <span class="scenario">Before asking for the raise you deserve</span>
-                    <span class="scenario">After bombing that client call</span>
-                    <span class="scenario">Your first day at the new job</span>
-                    <span class="scenario">Before your Saturday doubles match</span>
-                    <span class="scenario">Before your kid's championship game</span>
-                    <span class="scenario">When race day nerves hit at 5am</span>
-                    <span class="scenario">After your toddler's third meltdown</span>
-                    <span class="scenario">Before telling them how you really feel</span>
-                    <span class="scenario">When the 3am thoughts won't stop</span>
-                    <span class="scenario">Before boarding a 14-hour flight</span>
-                    <span class="scenario">When the creative block won't budge</span>
-                    <span class="scenario">After the VC said no</span>
-                </div>
-            </div>
+            <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
 
-            <p class="scenario-tagline fade-up visible fade-up-delay-8">Whitespace crafts <em>fresh, personalized</em> spoken meditations<br>for exactly where you are. <strong>On-demand.</strong></p>
-
-            <div class="fade-up visible fade-up-delay-9" style="margin-top: 56px;">
+            <div class="fade-up visible fade-up-delay-8" style="margin-top: 32px;">
                 <a href="#waitlist" class="hero-cta-btn">
                     Get Instant Beta Access
                 </a>
@@ -1657,6 +1649,28 @@
             <p class="lead fade-up fade-up-delay-1">Generic apps give you the same session everyone else gets.</p>
             <p class="lead fade-up fade-up-delay-2">Whitespace generates fresh, personalized guidance based on your moment, your mood, your goals.</p>
             <p class="lead fade-up fade-up-delay-3" style="color: rgba(255,255,255,0.7);">Choose your situation. We handle the rest.</p>
+
+            <!-- Scenario Rotator -->
+            <div class="scenario-rotator-wrapper fade-up fade-up-delay-4" style="margin-top: 40px;">
+                <div class="scenario-rotator" id="scenarioRotator">
+                    <span class="scenario">After doom-scrolling for 2 hours</span>
+                    <span class="scenario">Manifesting your first $10k MRR</span>
+                    <span class="scenario">Before the demo that could change everything</span>
+                    <span class="scenario">When your co-founder wants to pivot. Again.</span>
+                    <span class="scenario">Before asking for the raise you deserve</span>
+                    <span class="scenario">After bombing that client call</span>
+                    <span class="scenario">Your first day at the new job</span>
+                    <span class="scenario">Before your Saturday doubles match</span>
+                    <span class="scenario">Before your kid's championship game</span>
+                    <span class="scenario">When race day nerves hit at 5am</span>
+                    <span class="scenario">After your toddler's third meltdown</span>
+                    <span class="scenario">Before telling them how you really feel</span>
+                    <span class="scenario">When the 3am thoughts won't stop</span>
+                    <span class="scenario">Before boarding a 14-hour flight</span>
+                    <span class="scenario">When the creative block won't budge</span>
+                    <span class="scenario">After the VC said no</span>
+                </div>
+            </div>
         </div>
     </section>
 
