--- a/index.html
+++ b/index.html
@@ -1945,6 +1945,24 @@
                         <span>6:45 AM · Dec 31, 2025</span>
                     </div>
                 </a>
+
+                <!-- Tweet 7 - Jalaal -->
+                <a href="https://x.com/jalaal_tweets/status/2012295279110697101" target="_blank" rel="noopener" class="tweet-card">
+                    <div class="tweet-header">
+                        <img src="https://unavatar.io/twitter/jalaal_tweets" alt="" class="tweet-avatar">
+                        <div class="tweet-author-info">
+                            <div class="tweet-name-row">
+                                <span class="tweet-name">Jalaal</span>
+                            </div>
+                            <span class="tweet-handle">@jalaal_tweets</span>
+                        </div>
+                        <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                    </div>
+                    <p class="tweet-content">[Tweet content - please provide the actual text]</p>
+                    <div class="tweet-meta">
+                        <span>[Date - please provide]</span>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
