--- a/index.html
+++ b/index.html
@@ -1958,9 +1958,9 @@
                         </div>
                         <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
                     </div>
-                    <p class="tweet-content">[Tweet content - please provide the actual text]</p>
+                    <p class="tweet-content">For someone who learns more by listening or watching, this would actually help asi enjoy meditation before going to bed</p>
                     <div class="tweet-meta">
-                        <span>[Date - please provide]</span>
+                        <span>12:45 PM · Jan 16, 2026</span>
                     </div>
                 </a>
             </div>
