--- a/index.html
+++ b/index.html
@@ -2297,7 +2297,43 @@
             </div>
 
             <div class="journal-grid">
-                <a href="/blog/best-meditation-apps-2026.html" class="journal-card fade-up fade-up-delay-1">
+                <a href="/blog/15-second-sleep-window.html" class="journal-card fade-up fade-up-delay-1">
+                    <div class="journal-card-image">
+                        <img src="/blog/assets/blog-images/conscious.png" alt="15-Second Sleep Window">
+                    </div>
+                    <div class="journal-card-content">
+                        <span class="journal-card-tag inter">Research</span>
+                        <h3 class="crimson">The 15-Second Sleep Window That Changes Everything</h3>
+                        <p class="inter">New research proves what Edison knew: the moment between waking and sleeping is where breakthroughs happen.</p>
+                        <span class="journal-card-link crimson">Read Article →</span>
+                    </div>
+                </a>
+
+                <a href="/blog/brain-learns-during-sleep.html" class="journal-card fade-up fade-up-delay-2">
+                    <div class="journal-card-image">
+                        <img src="/blog/assets/blog-images/neural.png" alt="Brain Learns During Sleep">
+                    </div>
+                    <div class="journal-card-content">
+                        <span class="journal-card-tag inter">Research</span>
+                        <h3 class="crimson">Your Brain Learns While You Sleep</h3>
+                        <p class="inter">The science of sleep learning is more nuanced than the old myths. Here's what actually works.</p>
+                        <span class="journal-card-link crimson">Read Article →</span>
+                    </div>
+                </a>
+
+                <a href="/blog/meditation-state-science.html" class="journal-card fade-up fade-up-delay-3">
+                    <div class="journal-card-image">
+                        <img src="/blog/assets/blog-images/wave.png" alt="Meditation State Science">
+                    </div>
+                    <div class="journal-card-content">
+                        <span class="journal-card-tag inter">Research</span>
+                        <h3 class="crimson">The Meditation State Science Is Taking Seriously</h3>
+                        <p class="inter">Theta waves, neuroplasticity, and what the research actually shows - and what it doesn't.</p>
+                        <span class="journal-card-link crimson">Read Article →</span>
+                    </div>
+                </a>
+
+                <a href="/blog/best-meditation-apps-2026.html" class="journal-card fade-up fade-up-delay-4">
                     <div class="journal-card-image">
                         <img src="/blog/assets/blog-images/bestmeditationapps2026.png" alt="Best Meditation Apps 2026">
                     </div>
@@ -2309,7 +2345,7 @@
                     </div>
                 </a>
 
-                <a href="/blog/why-successful-people-meditate.html" class="journal-card fade-up fade-up-delay-2">
+                <a href="/blog/why-successful-people-meditate.html" class="journal-card fade-up fade-up-delay-5">
                     <div class="journal-card-image">
                         <img src="/blog/assets/blog-images/performance.png" alt="Why Successful People Meditate">
                     </div>
@@ -2321,7 +2357,7 @@
                     </div>
                 </a>
 
-                <a href="/blog/how-to-take-control-of-your-life.html" class="journal-card fade-up fade-up-delay-3">
+                <a href="/blog/how-to-take-control-of-your-life.html" class="journal-card fade-up fade-up-delay-6">
                     <div class="journal-card-image">
                         <img src="/blog/assets/blog-images/focused attention.png" alt="How to Take Control of Your Life">
                     </div>
@@ -2334,7 +2370,7 @@
                 </a>
             </div>
 
-            <div class="journal-cta fade-up fade-up-delay-4">
+            <div class="journal-cta fade-up fade-up-delay-7">
                 <a href="/blog" class="ghost-btn">
                     View All Articles
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
