--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
         .form-input {
             flex: 1;
             background: rgba(255, 255, 255, 0.05);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 12px;
@@ -585,6 +586,7 @@
 
         .comparison-item {
             background: rgba(255, 255, 255, 0.03);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border: 0.5px solid rgba(255, 255, 255, 0.1);
             border-radius: 12px;
@@ -676,6 +678,7 @@
 
         .feature-card {
             background: rgba(255, 255, 255, 0.05);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 16px;
@@ -750,6 +753,7 @@
             display: flex;
             flex-direction: column;
             background: rgba(255, 255, 255, 0.03);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.08);
             border-radius: 16px;
@@ -835,11 +839,25 @@
 
         .cta-box {
             background: rgba(255, 255, 255, 0.05);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 24px;
             padding: 48px 24px;
             text-align: center;
+        }
+
+        /* Firefox fallback - use more solid background to avoid backdrop-filter artifacts */
+        @supports (-moz-appearance: none) {
+            .cta-box,
+            .feature-card,
+            .comparison-item,
+            .journal-card {
+                background: rgba(25, 25, 30, 0.85);
+            }
+            .form-input {
+                background: rgba(35, 35, 40, 0.9);
+            }
         }
 
         @media (min-width: 768px) {
