--- a/index.html
+++ b/index.html
@@ -1963,6 +1963,42 @@
                         <span>12:45 PM · Jan 16, 2026</span>
                     </div>
                 </a>
+
+                <!-- Tweet 8 - Yuto -->
+                <a href="https://x.com/yuto_samurai_ai/status/2015668233869906336" target="_blank" rel="noopener" class="tweet-card">
+                    <div class="tweet-header">
+                        <img src="https://unavatar.io/twitter/yuto_samurai_ai" alt="" class="tweet-avatar">
+                        <div class="tweet-author-info">
+                            <div class="tweet-name-row">
+                                <span class="tweet-name">Yuto</span>
+                            </div>
+                            <span class="tweet-handle">@yuto_samurai_ai</span>
+                        </div>
+                        <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                    </div>
+                    <p class="tweet-content">This is interesting! Does it help you learn languages and sleep well?</p>
+                    <div class="tweet-meta">
+                        <span>8:08 PM · Jan 25, 2026</span>
+                    </div>
+                </a>
+
+                <!-- Tweet 9 - Elijah -->
+                <a href="https://x.com/iamelijahkhan/status/2014858080538763770" target="_blank" rel="noopener" class="tweet-card">
+                    <div class="tweet-header">
+                        <img src="https://unavatar.io/twitter/iamelijahkhan" alt="" class="tweet-avatar">
+                        <div class="tweet-author-info">
+                            <div class="tweet-name-row">
+                                <span class="tweet-name">E L I J A H</span>
+                            </div>
+                            <span class="tweet-handle">@iamelijahkhan</span>
+                        </div>
+                        <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                    </div>
+                    <p class="tweet-content">Amazing - just signed up. It does "offer ended" though FYI</p>
+                    <div class="tweet-meta">
+                        <span>2:29 PM · Jan 23, 2026</span>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
