--- a/index.html
+++ b/index.html
@@ -1901,7 +1901,25 @@
             </div>
 
             <div class="tweets-grid fade-up">
-                <!-- Tweet 1 - Sourabh Choraria -->
+                <!-- Tweet 1 - Yusuke -->
+                <a href="https://x.com/yusukelp/status/2016767347097583928" target="_blank" rel="noopener" class="tweet-card">
+                    <div class="tweet-header">
+                        <img src="https://unavatar.io/twitter/yusukelp" alt="" class="tweet-avatar">
+                        <div class="tweet-author-info">
+                            <div class="tweet-name-row">
+                                <span class="tweet-name">Yusuke</span>
+                            </div>
+                            <span class="tweet-handle">@yusukelp</span>
+                        </div>
+                        <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                    </div>
+                    <p class="tweet-content">This is actually insane. You paste a tweet link and it instantly turns it into a custom learning program. I just tried it and it blew my mind. Huge respect for building this!</p>
+                    <div class="tweet-meta">
+                        <span>8:56 PM · Jan 28, 2026</span>
+                    </div>
+                </a>
+
+                <!-- Tweet 2 - Sourabh Choraria -->
                 <a href="https://x.com/choraria/status/2010429436919984195" target="_blank" rel="noopener" class="tweet-card">
                     <div class="tweet-header">
                         <img src="https://unavatar.io/twitter/choraria" alt="" class="tweet-avatar">
